--- a/Draw/BBS/Controller/View/BBSBoardCell.xib
+++ b/Draw/BBS/Controller/View/BBSBoardCell.xib
@@ -36,10 +36,21 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
+					<object class="IBUIImageView" id="554808312">
+						<reference key="NSNextResponder" ref="1051945929"/>
+						<int key="NSvFlags">274</int>
+						<string key="NSFrame">{{15, 0}, {270, 44}}</string>
+						<reference key="NSSuperview" ref="1051945929"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="64363694"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
 					<object class="IBUIImageView" id="64363694">
 						<reference key="NSNextResponder" ref="1051945929"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{9, 15}, {55, 55}}</string>
+						<string key="NSFrame">{{20, 8}, {27, 28}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="463908999"/>
@@ -50,17 +61,17 @@
 					<object class="IBUILabel" id="463908999">
 						<reference key="NSNextResponder" ref="1051945929"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{77, 7}, {126, 21}}</string>
+						<string key="NSFrame">{{55, 4}, {90, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="616477797"/>
+						<reference key="NSNextKeyView" ref="901991654"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Board Name</string>
+						<string key="IBUIText">公告区</string>
 						<object class="NSColor" key="IBUITextColor" id="316227005">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -68,13 +79,13 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="864383575">
 							<int key="type">1</int>
-							<double key="pointSize">18</double>
+							<double key="pointSize">11</double>
 						</object>
-						<object class="NSFont" key="IBUIFont">
+						<object class="NSFont" key="IBUIFont" id="830062169">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">18</double>
+							<double key="NSSize">11</double>
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -82,39 +93,31 @@
 					<object class="IBUILabel" id="616477797">
 						<reference key="NSNextResponder" ref="1051945929"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{219, 8}, {83, 21}}</string>
+						<string key="NSFrame">{{153, 4}, {44, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="199586885"/>
+						<reference key="NSNextKeyView" ref="563120045"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">1000 / 9999</string>
+						<string key="IBUIText">9999999</string>
 						<reference key="IBUITextColor" ref="316227005"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<int key="IBUITextAlignment">2</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
-							<double key="pointSize">13</double>
-						</object>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">13</double>
-							<int key="NSfFlags">16</int>
-						</object>
+						<reference key="IBUIFontDescription" ref="864383575"/>
+						<reference key="IBUIFont" ref="830062169"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="199586885">
 						<reference key="NSNextResponder" ref="1051945929"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{77, 33}, {153, 21}}</string>
+						<string key="NSFrame">{{55, 20}, {153, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="563120045"/>
+						<reference key="NSNextKeyView" ref="472990039"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -125,24 +128,17 @@
 						<reference key="IBUITextColor" ref="316227005"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="314328081">
-							<int key="type">1</int>
-							<double key="pointSize">14</double>
-						</object>
-						<object class="NSFont" key="IBUIFont" id="46392728">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">14</double>
-							<int key="NSfFlags">16</int>
-						</object>
+						<reference key="IBUIFontDescription" ref="864383575"/>
+						<reference key="IBUIFont" ref="830062169"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="563120045">
 						<reference key="NSNextResponder" ref="1051945929"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{77, 59}, {113, 21}}</string>
+						<string key="NSFrame">{{198, 4}, {82, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="472990039"/>
+						<reference key="NSNextKeyView" ref="199586885"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -153,14 +149,15 @@
 						<reference key="IBUITextColor" ref="316227005"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
-						<reference key="IBUIFontDescription" ref="314328081"/>
-						<reference key="IBUIFont" ref="46392728"/>
+						<int key="IBUITextAlignment">2</int>
+						<reference key="IBUIFontDescription" ref="864383575"/>
+						<reference key="IBUIFont" ref="830062169"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUILabel" id="472990039">
 						<reference key="NSNextResponder" ref="1051945929"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{198, 59}, {102, 21}}</string>
+						<string key="NSFrame">{{198, 20}, {82, 20}}</string>
 						<reference key="NSSuperview" ref="1051945929"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -174,22 +171,41 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">2</int>
-						<reference key="IBUIFontDescription" ref="314328081"/>
-						<reference key="IBUIFont" ref="46392728"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">1</int>
+							<double key="pointSize">10</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">10</double>
+							<int key="NSfFlags">16</int>
+						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
+					<object class="IBUIImageView" id="901991654">
+						<reference key="NSNextResponder" ref="1051945929"/>
+						<int key="NSvFlags">265</int>
+						<string key="NSFrame">{{55, 43}, {223, 1}}</string>
+						<reference key="NSSuperview" ref="1051945929"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="616477797"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">bbs_board_line@2x.png</string>
+						</object>
+					</object>
 				</array>
-				<string key="NSFrameSize">{320, 85}</string>
+				<string key="NSFrameSize">{300, 44}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="64363694"/>
+				<reference key="NSNextKeyView" ref="554808312"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MQA</bytes>
-					<object class="NSColorSpace" key="NSCustomColorSpace">
-						<int key="NSID">2</int>
-					</object>
+					<bytes key="NSWhite">MCAwAA</bytes>
 				</object>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
@@ -248,6 +264,22 @@
 					</object>
 					<int key="connectionID">15</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">bgImageView</string>
+						<reference key="source" ref="1051945929"/>
+						<reference key="destination" ref="554808312"/>
+					</object>
+					<int key="connectionID">42</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">splitLine</string>
+						<reference key="source" ref="1051945929"/>
+						<reference key="destination" ref="901991654"/>
+					</object>
+					<int key="connectionID">44</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -273,11 +305,13 @@
 						<reference key="object" ref="1051945929"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="64363694"/>
-							<reference ref="463908999"/>
-							<reference ref="616477797"/>
 							<reference ref="199586885"/>
-							<reference ref="563120045"/>
 							<reference ref="472990039"/>
+							<reference ref="616477797"/>
+							<reference ref="463908999"/>
+							<reference ref="563120045"/>
+							<reference ref="554808312"/>
+							<reference ref="901991654"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -317,6 +351,16 @@
 						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="1051945929"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">41</int>
+						<reference key="object" ref="554808312"/>
+						<reference key="parent" ref="1051945929"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">43</int>
+						<reference key="object" ref="901991654"/>
+						<reference key="parent" ref="1051945929"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -327,6 +371,8 @@
 				<string key="3.CustomClassName">BBSBoardCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="41.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="43.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -337,7 +383,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">39</int>
+			<int key="maxID">44</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -346,9 +392,11 @@
 					<string key="superclassName">PPTableViewCell</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="author">UILabel</string>
+						<string key="bgImageView">UIImageView</string>
 						<string key="icon">UIImageView</string>
 						<string key="lastPost">UILabel</string>
 						<string key="name">UILabel</string>
+						<string key="splitLine">UIImageView</string>
 						<string key="statistic">UILabel</string>
 						<string key="timestamp">UILabel</string>
 					</dictionary>
@@ -356,6 +404,10 @@
 						<object class="IBToOneOutletInfo" key="author">
 							<string key="name">author</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="icon">
 							<string key="name">icon</string>
@@ -368,6 +420,10 @@
 						<object class="IBToOneOutletInfo" key="name">
 							<string key="name">name</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="splitLine">
+							<string key="name">splitLine</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="statistic">
 							<string key="name">statistic</string>
@@ -397,6 +453,10 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">bbs_board_line@2x.png</string>
+			<string key="NS.object.0">{430, 2}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
 </archive>
